--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -40,16 +40,27 @@ body textarea:required:valid
 
 
 h1
+	font:
+		family: $merriweather
+		size: em(36px)
+		weight: 700
+
 	text-align: center
-	padding: 90px 0
+	color: $black_font
 
 h3
-	font-size: 18px
+	font:
+		family: $proxima_nova
+		size: em(20px)
+		weight: 700
+	letter-spacing: 0.4px
+	color: $black_font
 
 body
 	font-size: 15px
+	color: rgba($black_font, 0.6)
 	min-width: 320px
 	position: relative
-	line-height: 1.6
-	font-family: $default-font
+	line-height: 1.5
+	font-family: $proxima_nova
 	overflow-x: hidden
