--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,5 +1,6 @@
-@import "bourbon"
+$proxima_nova: 'proxima_nova', sans-serif
+$merriweather: 'Merriweather', serif
 
-$default-font: "roboto", sans-serif
 $accent: #D79668
+$black_font: #122D2C
 $dark-bg: #122D2C
