--- a/app/sass/fonts.sass
+++ b/app/sass/fonts.sass
@@ -1,4 +1,5 @@
 @import "bourbon"
 
-+font-face("roboto", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
-+font-face("roboto", "../fonts/RobotoBold/RobotoBold", bold, $file-formats: eot woff ttf)
++font-face("proxima_nova", "../fonts/ProximaNova_bold/ProximaNova_bold", bold, $file-formats: eot woff ttf)
++font-face("proxima_nova", "../fonts/ProximaNova_regular/ProximaNova_regular", $file-formats: eot woff ttf)
+@import 'https://fonts.googleapis.com/css?family=Merriweather:300,700&subset=cyrillic,cyrillic-ext'
