--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,53 +1,16 @@
+
+// base
 @import "bourbon"
 @import "vars"
 @import "libs"
 @import "base"
 
+//modules
+@import "modules/header"
+@import "modules/footer"
 
-header
-  margin-bottom: 50px
-  background-color: grey
-
-footer
-  margin-top: 70px
-  background-color: grey
-
-.our_profile
-  height: 655px
-  background-color: #F9F9F9
-
-.doors, .furniture, .stairs
-  padding-top: 70px
-
-.content
-  text-align: center
-
-.how_we_work
-  height: 590px
-
-.why_we
-  height: 543px
-  background-color: $dark-bg
-
-  h1
-    color: white
-
-  h3
-    color: white
-
-  p
-    color: darken(white, 50%)
-
-.accordion
-  width: 600px
-  margin: 0 auto 
-
-
-
-
-
-
-
+//pages
+@import "pages/lp"
 
 
 @import "media"
