--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -1,6 +1,3 @@
-h1
-  padding: 90px 0
-
 .our_profile
   height: 655px
   background-color: #F9F9F9
@@ -30,3 +27,24 @@ h1
 .accordion
   width: 600px
   margin: 0 auto
+
+.statistic
+  padding-bottom: 80px
+
+.statistic .content h1
+  color: $accent
+  font-size: 60px
+  padding: 0
+
+@import "modules/order_bottom_block"
+
+.reviews
+  padding: 60px 0
+  h3
+    color: white
+
+  p
+    color: darken(white, 50%)
+
+.review_item
+  text-align: center
