--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -1,30 +1,63 @@
 header
-  height: 200px
-  padding: 15px 0
-  background-color: grey
+  height: 120px
+  z-index: 999
 
-  .logo
-    width: 50px
-    height: 50px
+.logo_wrapper
+  top: 40px
+
+.logo
+  background-repeat: no-repeat
+  background-image: url("../img/logo.svg")
+  background-position: center center
+  height: 40px
+  background-size: contain
+  display: block
+
+nav
+  top: 20px
+  a
+    color: white
+    font-size: em(14px)
+    text-decoration: none
+    letter-spacing: 0.3px
+    line-height: 27px
+    font-weight: 300
     display: block
+    float: left
+    width: 50%
 
-  nav
-    a
-      display: block
-      float: left
-      width: 50%
-      line-height: 27px
-      color: black
-      font-size: 14px
-      font-weight: 400
+    &:hover
+      color: #ccc
+      text-decoration: none
+      transition: 300ms
 
-      &:hover
-        color: #ccc
-        text-decoration: none
-        transition: 300ms
+.phone_wrapper
+  top: 30px
 
-  .order_button_wrapper
-    button
-      padding: 0 20px
-      font-size: 14px
-      font-weight: 700
+  img
+    float: left
+
+  ul
+    padding-left: 54px
+    margin: 0
+
+  li
+    list-style: none
+    color: white
+    line-height: 27px
+
+
+.btn_cta
+	padding: 20px 44px
+	background-color: white
+	color: $black_font
+	letter-spacing: 0.4px
+	line-height: 8.5
+	font:
+		weight: 700
+		size: em(15px)
+
+	&:hover
+		opacity: 0.8
+		text-decoration: none
+		transition: 0.3s
