--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -1,3 +1,23 @@
+.head_wrapper_lp
+  width: 100%
+  height: 600px
+  background-image: url(../img/img_bg/img_bg_lp.jpg)
+  background-repeat: no-repeat
+  background-size: contain
+
+.head_content_wrapper
+  h1
+    color: white
+    text-align: center
+    margin-bottom: 220px
+
+  .scroll_mouse
+    position: relative
+
+    img
+      position: absolute
+      bottom: 10px
+
 .our_profile
   height: 655px
   background-color: #F9F9F9
