--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -36,8 +36,6 @@ body textarea:required:valid
 		background-color: $accent
 		color: white
 		border: 1px solid $accent
-		text-decoration: none
-
 
 h1
 	font:
@@ -66,3 +64,15 @@ body
 	line-height: 1.5
 	font-family: $proxima_nova
 	overflow-x: hidden
+
+a
+	text-decoration: none
+
+	&:hover
+		text-decoration: none
+		transition: 0.3s
+	&:focus
+		text-decoration: none
+
+.row
+	padding-bottom: 90px
