--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -1,38 +1,47 @@
-.head_wrapper_lp
-  width: 100%
-  height: 600px
-  background-image: url(../img/img_bg/img_bg_lp.jpg)
-  background-repeat: no-repeat
-  background-size: contain
+.img_wrapper
+  width: 100px
+  height: 100px
+  margin: 10px auto
+  position: relative
 
-.head_content_wrapper
-  h1
-    color: white
-    text-align: center
-    margin-bottom: 220px
-
-  .scroll_mouse
-    position: relative
-
-    img
-      position: absolute
-      bottom: 10px
-
-.our_profile
-  height: 655px
-  background-color: #F9F9F9
-
-.doors, .furniture, .stairs
-  padding-top: 70px
+  .img_lp
+    position: absolute
+    top: 0
+    bottom: 0
+    right: 0
+    left: 0
+    margin: auto
+    display: block
+    max-width: 100%
+    max-height: 100%
 
 .content
   text-align: center
 
-.how_we_work
-  height: 590px
+.head_wrapper_lp
+  height: 600px
+  background-image: url(../img/img_bg/img_bg_lp.jpg)
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+
+  .head_content_wrapper
+    h1
+      color: white
+      text-align: center
+      margin-bottom: 220px
+
+    .scroll_mouse
+      position: relative
+
+      img
+        position: absolute
+        bottom: 10px
+
+.our_profile
+  background-color: #F9F9F9
 
 .why_we
-  height: 543px
   background-color: $dark-bg
 
   h1
@@ -48,8 +57,33 @@
   width: 600px
   margin: 0 auto
 
-.statistic
-  padding-bottom: 80px
+  dt
+    padding: 20px
+    margin-bottom: 20px
+    border: 1px solid $border_color
+    cursor: pointer
+
+    a
+      padding: 23px 500px 20px 0px
+      color: $black_font
+
+      .ic_arrow
+
+        &:active
+          transform: rotate(180deg)
+        &::after
+          content: ""
+          background-image: url(../img/ic_arrow.svg)
+          background-repeat: no-repeat
+          height: 20px
+          width: 20px
+          float: right
+          background-position: center
+
+  dd
+    margin-left: 20px
+    padding-bottom: 40px
+    padding-top: 20px
 
 .statistic .content h1
   color: $accent
@@ -59,7 +93,7 @@
 @import "modules/order_bottom_block"
 
 .reviews
-  padding: 60px 0
+
   h3
     color: white
 
@@ -68,3 +102,4 @@
 
 .review_item
   text-align: center
+  padding-top: 60px
