--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -24,6 +24,7 @@
   background-repeat: no-repeat
   background-size: cover
   background-position: center
+  position: relative
 
   .head_content_wrapper
     h1
@@ -31,12 +32,12 @@
       text-align: center
       margin-bottom: 220px
 
-    .scroll_mouse
-      position: relative
-
-      img
-        position: absolute
-        bottom: 10px
+  .scroll_mouse
+    position: absolute
+    bottom: 60px
+    left: 50%
+    width: 17px
+    height: 24px
 
 .our_profile
   background-color: #F9F9F9
