--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -24,19 +24,6 @@ body input:required:valid,
 body textarea:required:valid
 	color: #666
 
-.second-btn
-	padding: 10px	50px
-	border: 1px solid #D6DADA
-	background-color: transparent
-	color: $accent
-	font:
-		size: em(14px)
-
-	&:hover
-		background-color: $accent
-		color: white
-		border: 1px solid $accent
-
 h1
 	font:
 		family: $merriweather
@@ -70,9 +57,23 @@ a
 
 	&:hover
 		text-decoration: none
-		transition: 0.3s
+		transition: all 0.3s ease-in-out
 	&:focus
 		text-decoration: none
+
+.second-btn
+	padding: 10px	50px
+	border: 1px solid #D6DADA
+	background-color: transparent
+	color: $accent
+	font:
+		size: em(14px)
+
+	&:hover
+		background-color: $accent
+		color: white
+		border: 1px solid $accent
+		transition: all 0.3s ease-in-out
 
 .row
 	padding-bottom: 90px
