--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -66,6 +66,7 @@ a
 	border: 1px solid #D6DADA
 	background-color: transparent
 	color: $accent
+	transition: 0.3s
 	font:
 		size: em(14px)
 
@@ -73,7 +74,6 @@ a
 		background-color: $accent
 		color: white
 		border: 1px solid $accent
-		transition: all 0.3s ease-in-out
 
 .row
 	padding-bottom: 90px
