--- a/app/sass/modules/_footer.sass
+++ b/app/sass/modules/_footer.sass
@@ -1,3 +1,55 @@
 footer
-  margin-top: 70px
   background-color: grey
+
+.foo_top, .foo_bottom
+  padding: 30px 0px
+
+.logo_wrapper
+  top: 40px
+
+.logo
+  background-repeat: no-repeat
+  background-image: url("../img/logo.svg")
+  background-position: center center
+  height: 40px
+  background-size: contain
+  display: block
+
+nav
+  top: 20px
+  text-align: centers
+
+  a
+    color: white
+    font-size: em(14px)
+    text-decoration: none
+    letter-spacing: 0.3px
+    font-weight: 300
+    display: inline
+    float: none
+    padding-left: 40px
+    padding-right: 40px
+
+    &:hover
+      color: #ccc
+
+.location
+  float: left
+
+.location p
+  padding-left: 54px
+
+.phone_wrapper
+  top: 30px
+
+  img
+    float: left
+
+  ul
+    padding-left: 54px
+    margin: 0
+
+  li
+    list-style: none
+    color: white
+    line-height: 27px
