--- a/app/sass/modules/_order_bottom_block.sass
+++ b/app/sass/modules/_order_bottom_block.sass
@@ -16,9 +16,9 @@
   margin: 0 auto
   border-bottom: 1px  solid #3D5352
 
-input[type=text]
+.name
   width: 100%
-  padding: 15px 70px
+  padding: 15px 65px
   margin-bottom: 15px
   display: inline-block
   border: 1px solid #28403F
@@ -27,17 +27,34 @@ input[type=text]
   color: white
   transition: 0.3s
   outline: none
+  background-image: url(../img/ic_user.svg)
+  background-position: 20px center
+  background-repeat: no-repeat
 
   &:hover
     border: 1px solid lighten(#28403F, 10%)
   &:focus
     border: 1px solid $accent
 
-#name
-  background-image: url(ic_user.svg)
-  background-size: 30px 30px
-  background-position: 1px 1px
+.phone
+  width: 100%
+  padding: 15px 65px
+  margin-bottom: 15px
+  display: inline-block
+  border: 1px solid #28403F
+  box-sizing: border-box
+  background-color: transparent
+  color: white
+  transition: 0.3s
+  outline: none
+  background-image: url(../img/ic_phone.svg)
+  background-position: 20px center
   background-repeat: no-repeat
+
+  &:hover
+    border: 1px solid lighten(#28403F, 10%)
+  &:focus
+    border: 1px solid $accent
 
 
 input[type=submit]
@@ -47,6 +64,10 @@ input[type=submit]
   padding: 15px 20px
   margin: 8px 0
   border: none
+  transition: 0.3s
+
+  &:hover
+    opacity: 0.8
 
 .review_item img
   width: 65px
