--- a/app/sass/modules/_order_bottom_block.sass
+++ b/app/sass/modules/_order_bottom_block.sass
@@ -12,7 +12,7 @@
 
 .form_wrapper
   padding: 70px 100px
-  width: 600px
+  max-width: 600px
   margin: 0 auto
   border-bottom: 1px  solid #3D5352
 
