--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -11,11 +11,20 @@
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
+	
+	.item_vertical
+		padding-bottom: 60px
 
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
+
+	.item_vertical
+		padding-bottom: 60px
+
+	.row
+		padding-bottom: 60px
 
 
 /* Extra Small Devices, Phones */
@@ -53,4 +62,3 @@
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
 	/**/
-
