--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -55,7 +55,7 @@
     color: darken(white, 50%)
 
 .accordion
-  width: 600px
+  max-width: 600px
   margin: 0 auto
 
   dt
@@ -66,7 +66,7 @@
     position: relative
 
     a
-      padding: 23px 500px 20px 0px
+      padding: 23px 50px 20px 0px
       color: $black_font
 
     .arrow_wrapper
