fixed btn_cta, start mob_menu

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -12,16 +12,32 @@
 @media only screen and (max-width : 992px)
 	/**/
 
+	.item_vertical
+		padding-bottom: 60px
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
 
+	.item_vertical
+		padding-bottom: 60px
+
+	.row
+		padding-bottom: 60px
+
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
+	.mob_menu_wrapper
+		width: 100%
+		height: 100%
+		background-color: $dark-bg
 
+
+	.btn_cta, .scroll_mouse
+		display: none
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
@@ -53,4 +69,3 @@
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
 	/**/
-
