--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -24,21 +24,6 @@ body input:required:valid,
 body textarea:required:valid
 	color: #666
 
-.second-btn
-	padding: 10px	50px
-	border: 1px solid #D6DADA
-	background-color: transparent
-	color: $accent
-	font:
-		size: em(14px)
-
-	&:hover
-		background-color: $accent
-		color: white
-		border: 1px solid $accent
-		text-decoration: none
-
-
 h1
 	font:
 		family: $merriweather
@@ -66,3 +51,32 @@ body
 	line-height: 1.5
 	font-family: $proxima_nova
 	overflow-x: hidden
+
+a
+	text-decoration: none
+
+	&:hover
+		text-decoration: none
+		transition: all 0.3s ease-in-out
+	&:focus
+		text-decoration: none
+
+.second-btn
+	padding: 10px	50px
+	border: 1px solid #D6DADA
+	background-color: transparent
+	color: $accent
+	transition: 0.3s
+	font:
+		size: em(14px)
+
+	&:hover
+		background-color: $accent
+		color: white
+		border: 1px solid $accent
+
+.row
+	padding-bottom: 90px
+
+.arrow-up
+  transform: rotate(180deg)
