--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -46,15 +46,17 @@ nav
 
 
 .btn_cta
-	padding: 0px 30px
-	background-color: white
-	color: $black_font
-	letter-spacing: 0.4px
-	line-height: 3.5
-	font:
-		weight: 700
-		size: em(15px)
+  margin-top: 30px
+  border: none
+  padding: 0px 30px
+  background-color: white
+  color: $black_font
+  letter-spacing: 0.4px
+  line-height: 3.5
+  font:
+    weight: 700
+    size: em(15px)
 
-	&:hover
-		opacity: 0.8
-		text-decoration: none
+  &:hover
+  	opacity: 0.8
+  	text-decoration: none
