--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -11,7 +11,7 @@
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
-	
+
 	.item_vertical
 		padding-bottom: 60px
 
@@ -30,7 +30,14 @@
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
+	.mob_menu_wrapper
+		width: 100%
+		height: 100%
+		background-color: $dark-bg
 
+
+	.btn_cta, .scroll_mouse
+		display: none
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
