--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -35,6 +35,10 @@ h1
 	padding: 90px 0
 	letter-spacing: .6px
 
+	@media only screen and (max-width : 480px)
+		font-size: em(30px)
+		padding: 60px 30px
+
 h3
 	font:
 		family: $proxima_nova
@@ -77,6 +81,9 @@ a
 
 .row
 	padding-bottom: 90px
+
+	@media only screen and (max-width : 480px)
+		padding-bottom: 10px
 
 .arrow-up
   transform: rotate(180deg)
