--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -6,7 +6,8 @@
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
 	/**/
-
+	.mob_menu_button_wrapper
+		display: none
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
@@ -17,31 +18,83 @@
 
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px)
+@media only screen and (max-width : 767px)
 	/**/
+
+	.logo
+	  background-position: left
+
+	.mob_menu_button_wrapper
+		display: block
+
+		.mob_menu_button
+			position: absolute
+			margin-top: 30px
+			right: 20px
+			padding: 0px 40px
+			color: white
+			letter-spacing: 0.4px
+			line-height: 3.5
+			border: 3px solid white
+			font:
+			  weight: 700
+			  size: em(16px)
 
 	.item_vertical
 		padding-bottom: 60px
 
-	.row
-		padding-bottom: 60px
+
+	.scroll_mouse
+		display: none
 
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
-	.mob_menu_wrapper
-		width: 100%
-		height: 100%
-		background-color: $dark-bg
+
+	.head_content_wrapper
+		padding: 0	30px
 
 
-	.btn_cta, .scroll_mouse
-		display: none
+	.mob_menu_button_wrapper
+		.mob_menu_button
+			right: 10px
+			padding: 0 30px
+
+	.logo_wrapper
+		left: -5px
+
+		.logo
+			background-position: left
+
+	.head_wrapper_lp
+		height: 500px
+
+	.head_content_wrapper
+		.header_title
+			padding: 30px 0
+
+
+
+
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
+	.mob_menu_button_wrapper
+		.mob_menu_button
+			right: 10px
+			padding: 0 30px
+
+	.logo_wrapper
+		left: -5px
+
+		.logo
+			background-position: center center
+
+
+
+
 
 
 /*==========  Mobile First  ==========*/
@@ -69,3 +122,5 @@
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
 	/**/
+	.mob_menu_button_wrapper
+		display: none
