--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -10,7 +10,7 @@ header
   background-image: url("../img/logo.svg")
   background-position: center center
   height: 40px
-  background-size: contain
+  background-size: inherit
   display: block
 
 nav
