--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -16,10 +16,53 @@
 	.item_vertical
 		padding-bottom: 60px
 
+	.close_icon
+		display: none
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 767px)
 	/**/
+
+	// mobile nav
+	nav
+		display: none
+
+	.menu_show
+		display: block
+		background-color: $dark-bg
+		z-index: 100
+		width: 100%
+		height: 100%
+		position: absolute
+		padding: 100px 50px
+		margin-left: -15px
+		margin-top: -20px
+
+		a
+			width: 100%
+			color: #fff
+			letter-spacing: .3px
+			line-height: 60px
+			font-weight: 300
+			font:
+				size: em(30px)
+				family: $merriweather
+
+	.close_icon
+		display: none
+
+	.close_icon_show
+		display: block
+		position: absolute
+		z-index: 101
+		top: 30px
+		right: 30px
+		width: 24px
+		height: 24px
+
+
+	// mobile nav
 
 	.logo
 	  background-position: left
