--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -83,10 +83,14 @@
     padding-bottom: 40px
     padding-top: 20px
 
-.statistic .content h1
-  color: $accent
-  font-size: 60px
-  padding: 0
+.statistic
+  background-color: #F9F9F9
+
+  .content h1
+    color: $accent
+    font-size: 60px
+    padding: 0
+    margin-bottom: 0
 
 @import "modules/order_bottom_block"
 
