--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -71,8 +71,10 @@ a
 	background-color: transparent
 	color: $accent
 	transition: 0.3s
+	letter-spacing: 0.8px
 	font:
 		size: em(14px)
+		weight: 700
 
 	&:hover
 		background-color: $accent
@@ -84,6 +86,3 @@ a
 
 	@media only screen and (max-width : 480px)
 		padding-bottom: 10px
-
-.arrow-up
-  transform: rotate(180deg)
