--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -68,15 +68,23 @@
       padding: 23px 50px 20px 0px
       color: $black_font
 
-    .arrow_wrapper
+    .arrow
       height: 20px
       width: 20px
       float: right
       right: 20px
       position: absolute
+      vertical-align: middle
 
-    .ic_arrow_rotated
+    .arrow_up
       transform: rotate(180deg)
+      animation: arrow_up 0.5s
+
+  @keyframes arrow_up
+  	from
+  		transform: rotate(0deg)
+  	to
+  		transform: rotate(180deg)
 
   dd
     margin-left: 20px
