--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -16,6 +16,7 @@ header
 
 nav
   top: 20px
+  z-index: 1
   a
     color: white
     font-size: em(14px)
@@ -32,6 +33,7 @@ nav
 
 .phone_wrapper
   top: 30px
+  z-index: 1
 
   img
     float: left
@@ -44,6 +46,9 @@ nav
     list-style: none
     color: white
     line-height: 27px
+
+.btn_cta_wrapper
+  z-index: 1
 
 .btn_cta
   margin-top: 30px
