--- a/app/sass/pages/_contacts.sass
+++ b/app/sass/pages/_contacts.sass
@@ -1,5 +1,5 @@
 .contacts_wrapper
-  height: 100%
+  height: 100vh
   width: 100%
   background-color: grey
 
@@ -25,8 +25,14 @@
   h1
     padding: 0
 
-#map
-  height: 100%
-  width: 100%
+.map_wrapper
   position: absolute
-  z-index: 0
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+
+#map
+  width: 100%
+  height: 100%
+  position: relative
