--- a/app/sass/pages/_contacts.sass
+++ b/app/sass/pages/_contacts.sass
@@ -1,7 +1,6 @@
 .contacts_wrapper
   height: 100vh
   width: 100%
-  background-color: grey
 
   .head_content_wrapper
     h1
@@ -9,21 +8,33 @@
       text-align: center
 
 .contact_form
-  width: 400px
-  height: 400px
   z-index: 1
-  position: relative
-  background-color: #2b2b2b
+  position: absolute
+  top: 30%
 
   .contact_form_wrapper
-    padding-top: 40px
-    padding-left: 50px
+    padding: 30px 90px 50px 60px
+    background-color: rgba(43,43,43,0.9)
+
+  h1
+    padding-top: 20px
+    padding-bottom: 40px
+    margin: 0
 
   h1, p
     color: white
     text-align: left
-  h1
-    padding: 0
+
+  p
+    padding-bottom: 30px
+    padding-top: 0
+    margin: 0
+
+  .contacts_social_icons_wrapper
+    padding-bottom: 0
+
+  .ic_fb_white
+    padding-left: 10px
 
 .map_wrapper
   position: absolute
