--- a/app/sass/pages/_catalog.sass
+++ b/app/sass/pages/_catalog.sass
@@ -19,18 +19,23 @@
       margin: 0 auto
 
 .tabs_catalog
-  background-color: #fff
-  margin: 30px  0
+  background-color: #F9F9F9
+  height: 170px
 
   .tabs_row
     padding-bottom: 0
 
   .tab_catalog
-    margin: 0 15px
+    height: 170px
+    padding: 10%
+
+  .tab_catalog_selected
+    background-color: white
 
   .tab_icons_wrapper
     float: left
     margin-right: 30px
+    line-height: 6
 
   .tab_content
     padding-left: 80px
