--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -27,6 +27,14 @@ body input:required:valid,
 body textarea:required:valid
 	color: #666
 
+body
+  background-color: #bfbfbf
+
+.body_wrapper
+  background-color: white
+  max-width: 1440px
+  margin: 0 auto
+
 h1
 	font:
 		family: $merriweather
