--- a/app/sass/pages/_catalog.sass
+++ b/app/sass/pages/_catalog.sass
@@ -19,7 +19,7 @@
       margin: 0 auto
 
 .tabs_catalog
-  background-color: #F9F9F9
+  background-color: #F3F3F3
   height: 155px
   margin-right: auto
   margin-left: auto
@@ -27,7 +27,7 @@
   padding-right: 15px
 
   .tabs_catalog_wrapper
-    // width: 1000px
+    width: 1000px
 
   .tabs_row
     padding-bottom: 0
@@ -65,32 +65,18 @@
 
 .catalog_gallery
   padding-top: 70px
-  padding-bottom: 70px
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
 
   .g_img_wrapper
-    padding-bottom: 50px
-    width: 25%
-    float: left
-    margin-left: 10px
-    margin-right: 10px
-
-    @media only screen and (max-width : 992px)
-      width: 33.33333333%
-      float: left
-      margin-left: 10px
-      margin-right: 10px
-
-    @media only screen and (max-width : 767px)
-      width: 100%
+    padding-bottom: 70px
+    margin-right: 30px
+    margin-left: 30px
 
   .g_img
     border: 1px solid #E2E5E7
-    width: 100%
-    height: auto
 
   .g_title
     text-align: center
     padding-top: 20px
-
-footer
-  margin-top: 100px
