--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -28,12 +28,13 @@ body textarea:required:valid
 	color: #666
 
 body
-  background-color: #bfbfbf
+  background-color: #4f5355
 
 .body_wrapper
-  background-color: white
-  max-width: 1440px
-  margin: 0 auto
+	background-color: white
+	max-width: 1440px
+	margin: 0 auto
+	overflow: hidden
 
 h1
 	font:
