--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -224,6 +224,10 @@
 	  p
 	    padding-bottom: 20px
 
+	.g_img
+		width: 250px
+		height: 250px
+
 @media only screen and (max-width : 320px)
 
 	+logo_fixed
@@ -231,9 +235,27 @@
 	.mob_menu_button_wrapper
 		right: 20px
 
-
 	.accordion
 		padding: 0 30px 60px
+
+	//catalog
+
+	.tabs_catalog
+		width: 830px
+
+		.tab_wrapper
+			width: 276px
+
+			.tab
+				padding: 7%
+
+				.tab_icons_wrapper
+					margin-right: 30px
+					line-height: 7.5
+
+				.tab_content
+					padding-left: 0
+					padding-top: 15px
 
 
 /*==========  Mobile First  ==========*/
