v9 product page finalized

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -2,6 +2,11 @@ $proxima_nova: 'proxima_nova', sans-serif
 $merriweather: 'Merriweather', serif
 
 $accent: #D79668
+
 $black_font: #122D2C
+
 $dark-bg: #122D2C
+$grey-bg: #f9f9f9
+
+
 $border_color: #E7E9E9
