--- a/app/sass/pages/_lp.sass
+++ b/app/sass/pages/_lp.sass
@@ -39,7 +39,7 @@
     height: 24px
 
 .our_profile
-  background-color: #F9F9F9
+  background-color: $grey-bg
 
 .why_we
   background-color: $dark-bg
@@ -92,7 +92,7 @@
     padding-top: 20px
 
 .statistic
-  background-color: #F9F9F9
+  background-color: $grey-bg
 
   .content h1
     color: $accent
