--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -19,17 +19,18 @@ nav
   z-index: 1
   a
     color: white
-    font-size: em(14px)
+    font-size: em(15px)
     text-decoration: none
     letter-spacing: 0.3px
     line-height: 27px
-    font-weight: 300
+    font-weight: 700
     display: block
     float: left
     width: 50%
+    transition: 0.3s
 
     &:hover
-      color: #ccc
+      color: $accent
 
 .phone_wrapper
   top: 30px
@@ -58,10 +59,10 @@ nav
   color: $black_font
   letter-spacing: 0.4px
   line-height: 3.5
+  transition: 0.3s
   font:
     weight: 700
     size: em(15px)
 
   &:hover
   	opacity: 0.8
-  	text-decoration: none
