--- a/app/sass/modules/_footer.sass
+++ b/app/sass/modules/_footer.sass
@@ -23,19 +23,18 @@ footer
 
     a
       color: white
-      font-size: em(14px)
+      font-size: em(15px)
       text-decoration: none
       letter-spacing: 0.3px
-      font-weight: 300
+      font-weight: 700
       display: inline
       float: none
       color: $black_font
-      padding-left: 20px
-      padding-right: 20px
+      padding-left: 2.5em
       transition: 0.3s
 
       &:hover
-        color: #ccc
+        color: $accent
 
   .social_icons_wrapper
     .social_icons
