--- a/app/sass/pages/_product_page.sass
+++ b/app/sass/pages/_product_page.sass
@@ -3,48 +3,39 @@
   background-color: $dark-bg
 
 .pp_image_block
+  margin-top: -160px
   text-align: center
 
   .pp_image_big
-      margin-top: 90px
-      border: 1px solid #E2E5E7
+    border: 1px solid #E2E5E7
 
 .head_content_wrapper_pp
-  position: relative
-  top: 70px
-  left: 20px
+  margin-bottom: 80px
 
   .header_product_title
     color: white
     padding: 0
     text-align: left
 
-  .disc_head_content_pp
+  .price_pp
     color: white
 
-.pp_image_small
+.pp_image_small img
   margin-top: 30px
+  margin-left: 7px
+  margin-right: 7px
+  width: 130px
+  transition: 0.3s
 
-  img
-    margin-left: 8px
-    margin-right: 8px
-    width: 140px
-    border: 1px solid #E2E5E7
-    transition: 0.3s
-
-    &:hover
-    transition: 0.3s
-    opacity: 0.95
-
-    &:hover
-      box-shadow: 0px 5px 21px -5px rgba(0,0,0,0.3)
-      opacity: 1
+  &:hover
+    cursor: pointer
+    box-shadow: 0px 5px 21px -5px rgba(0,0,0,0.3)
 
 .pp_image_small_selected
   border: 1px solid $accent !important
 
-.content-pp
-  margin-top: 30px
+.info
+  margin-top: -170px
 
 .side_features
   background-color: $grey-bg
