--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -22,7 +22,6 @@
 		left: 7%
 		width: 100%
 
-
 @media only screen and (max-width : 992px)
 
 	.item_vertical
@@ -59,7 +58,6 @@
 
 	.side_features_wrapper
 		display: block
-
 
 @media only screen and (max-width : 767px)
 
@@ -284,6 +282,12 @@
 
 	.head_wrapper_pp
 		height: 270px
+
+	.slick-next
+		right: 20px
+
+	.slick-prev
+		left: 20px
 
 @media only screen and (max-width : 320px)
 
