--- a/app/sass/fonts.sass
+++ b/app/sass/fonts.sass
@@ -2,4 +2,6 @@
 
 +font-face("proxima_nova", "../fonts/ProximaNova_bold/ProximaNova_bold", bold, $file-formats: eot woff ttf)
 +font-face("proxima_nova", "../fonts/ProximaNova_regular/ProximaNova_regular", $file-formats: eot woff ttf)
++font-face("FontAwesome", "../fonts/font_awesome/ProximaNova_regular/fontawesome-webfont", $file-formats: eot woff woff2 ttf)
+
 @import 'https://fonts.googleapis.com/css?family=Merriweather:300,700&subset=cyrillic,cyrillic-ext'
