--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,12 +2,15 @@
 // base
 @import "bourbon"
 @import "vars"
-@import "libs"
 @import "base"
 
 //modules
 @import "modules/header"
 @import "modules/footer"
+
+//csslibs
+@import "csslibs/slick"
+@import "csslibs/font-awesome/font-awesome"
 
 //pages
 @import "pages/lp"
