--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -17,6 +17,7 @@
 @import "pages/catalog"
 @import "pages/contacts"
 @import "pages/product_page"
+@import "pages/articles"
 
 //media
 @import "media"
