--- a/app/sass/pages/_product_page.sass
+++ b/app/sass/pages/_product_page.sass
@@ -7,7 +7,8 @@
   text-align: center
 
   .pp_image_big
-    border: 1px solid #E2E5E7
+    border: none
+    outline: none
 
 .head_content_wrapper_pp
   margin-bottom: 80px
