--- a/sass/main.sass
+++ b/sass/main.sass
@@ -18,6 +18,7 @@
 @import "pages/contacts"
 @import "pages/product_page"
 @import "pages/articles"
+@import "pages/article_page"
 
 //media
 @import "media"
