--- a/sass/pages/_product_page.sass
+++ b/sass/pages/_product_page.sass
@@ -7,7 +7,8 @@
   text-align: center
 
   .pp_image_big
-    border: 1px solid #E2E5E7
+    border: none
+    outline: none
 
 .head_content_wrapper_pp
   margin-bottom: 80px
@@ -51,6 +52,6 @@
     p
       font-size: 14px
 
-.you_also_like_wrapper
+.similar_articles_wrapper
   padding-top: 70px
   text-align: center
