--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -56,9 +56,20 @@
 	.pp_image_big
 		width: 440px
 
-
 	.side_features_wrapper
 		display: block
+
+	//article_page
+
+	.article_content_wrapper_ap
+		max-width: 100%
+		padding: 0
+
+	.article_content_ap
+		max-width: 640px
+		margin: 0 auto
+		padding: 30px 40px
+
 
 
 @media only screen and (max-width : 767px)
@@ -316,8 +327,8 @@
 	.head_wrapper_innerpage .head_content_wrapper_h1 h1
 		padding: 30px 0
 
-	.content_articles_wrapper .article_wrapper
-		margin: 10px 0
+	.content_articles_wrapper
+		padding-top: 30px
 
 @media only screen and (max-width : 320px)
 
@@ -370,6 +381,12 @@
 @media only screen and (min-width : 767px)
 	/**/
 
+	//articles
+
+	.content_articles_wrapper .article_wrapper
+		width: 324px
+		margin: 0 18px 70px
+
 	//product page
 
 	.btn_cta_accent
@@ -379,7 +396,10 @@
 @media only screen and (min-width : 992px)
 	/**/
 
+	//articles
 
+	.content_articles_wrapper .article_wrapper
+		width: 360px
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
