--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -4,9 +4,9 @@ $merriweather: 'Merriweather', serif
 $accent: #D79668
 
 $black_font: #122D2C
+$grey_font: rgba($black_font, 0.6)
 
 $dark-bg: #122D2C
 $grey-bg: #f9f9f9
-
 
 $border_color: #E7E9E9
