--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -54,6 +54,7 @@ nav
 .btn_cta
   margin-top: 30px
   border: none
+  border-radius: 0
   padding: 0px 30px
   background-color: white
   color: $black_font
