--- a/app/sass/pages/_article_page.sass
+++ b/app/sass/pages/_article_page.sass
@@ -12,7 +12,7 @@
     height: 100%
 
   .article_content_ap
-    margin: 30px 40px
+    padding: 30px 40px
 
     h1
       text-align: left
@@ -25,3 +25,4 @@
 
 .similar_articles_wrapper
   padding-bottom: 70px
+  text-align: center
