added magnific pop up

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -7,10 +7,12 @@
 //modules
 @import "modules/header"
 @import "modules/footer"
+@import "modules/order_pop_up"
 
 //csslibs
 @import "csslibs/slick"
 @import "csslibs/font-awesome/font-awesome"
+@import app/libs/magnific_popup/magnific-popup.sass
 
 //pages
 @import "pages/lp"
