--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -61,6 +61,7 @@ nav
   letter-spacing: 0.4px
   line-height: 3.5
   transition: 0.3s
+  outline: none
   font:
     weight: 700
     size: em(15px)
