--- a/app/sass/modules/_order_pop_up.sass
+++ b/app/sass/modules/_order_pop_up.sass
@@ -1,25 +1,25 @@
 .form_wrapper_pop
-  // top: 0
-  // left: 0
-  // width: 100%
-  // height: 100%
-  z-index: 999
-  position: absolute
-  // background-color: rgba(0, 0, 0, 0.8)
+  text-align: center
 
 .form_pop
   background-color: white
-  padding: 70px 100px
-  max-width: 600px
+  padding: 40px 50px
+  max-width: 460px
   margin: 0 auto
-  border-bottom: 1px  solid #3D5352
+
+  h3
+    padding: 0 20px
+    margin-top: 0
+
+  p
+    margin-bottom: 30px
 
 .name_pop
   width: 100%
   padding: 15px 65px
   margin-bottom: 15px
   display: inline-block
-  border: 1px solid #28403F
+  border: 1px solid lighten($black_font, 70%)
   box-sizing: border-box
   background-color: transparent
   color: white
@@ -30,7 +30,7 @@
   background-repeat: no-repeat
 
   &:hover
-    border: 1px solid lighten(#28403F, 10%)
+    border: 1px solid lighten($black_font, 50%)
   &:focus
     border: 1px solid $accent
 
@@ -39,7 +39,7 @@
   padding: 15px 65px
   margin-bottom: 15px
   display: inline-block
-  border: 1px solid #28403F
+  border: 1px solid lighten($black_font, 70%)
   box-sizing: border-box
   background-color: transparent
   color: white
@@ -50,7 +50,7 @@
   background-repeat: no-repeat
 
   &:hover
-    border: 1px solid lighten(#28403F, 10%)
+    border: 1px solid lighten($black_font, 50%)
   &:focus
     border: 1px solid $accent
 
@@ -63,6 +63,7 @@
   margin: 8px 0
   border: none
   transition: 0.3s
+  outline: none
 
   &:hover
     opacity: 0.8
